refactor: 重构热加载与增强
1. 支持多模块
2. 重构增强器
3. 增加一些i18n信息
4. 重构开发模块

Closes #80